--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
+ul {
+  list-style: none;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
