--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,21 @@ ul {
   list-style: none;
 }
 
+small {
+  font-size: 20px;
+}
+
 .App {
   text-align: center;
 }
 
-.weather-app-wrapper {
-  max-width: 600px;
-  margin: 30px auto;
+.container {
+  max-width: 720px;
 }
 
+
 .weather-app {
-  padding: 20px;
+  padding: 40px;
   border: 3px solid #dadde1;
   border-radius: 8px;
   background: radial-gradient(
@@ -35,7 +39,7 @@ ul {
 }
 
 .weather-forcast {
-  padding: 20px;
+  padding: 40px;
   border: 3px solid #dadde1;
   border-radius: 8px;
   background: radial-gradient(
