--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ ul {
   list-style: none;
 }
 
+a {
+  font-size: 18px;
+}
+
 small {
   font-size: 20px;
 }
@@ -34,7 +38,7 @@ small {
 
 .weather-temperature .units {
   position: relative;
-  font-size: 16px;
+  font-size: 25px;
   top: -34px;
 }
 
